--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>가계부 - 로그인</title>
+    <title>지윤이 도토리 창고 - 로그인</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="login-container">
-            <h1 class="app-title">가계부</h1>
+            <h1 class="app-title">지윤이 도토리 창고</h1>
             <form id="loginForm" class="auth-form">
                 <div class="input-group">
                     <input type="text" id="loginId" placeholder="아이디" required>
