--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>가계부 - 대시보드</title>
+    <title>지윤이 도토리 창고 - 대시보드</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,14 +15,36 @@
             <h1>대시보드</h1>
             <div class="nav-buttons">
                 <button onclick="location.href='calendar.html'" class="nav-btn">캘린더</button>
-                <button onclick="logout()" class="nav-btn">로그아웃</button>
+                <button onclick="confirmLogout()" class="nav-btn logout-btn">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V5C3 4.46957 3.21071 3.96086 3.58579 3.58579C3.96086 3.21071 4.46957 3 5 3H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M16 17L21 12L16 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M21 12H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
             </div>
         </header>
 
         <div class="period-selector">
-            <button id="dailyBtn" class="period-btn active">일</button>
-            <button id="weeklyBtn" class="period-btn">주</button>
-            <button id="monthlyBtn" class="period-btn">월</button>
+            <div class="period-dropdown-group">
+                <select id="periodType" class="period-dropdown">
+                    <option value="day">일</option>
+                    <option value="week">주</option>
+                    <option value="month">월</option>
+                    <option value="year">년</option>
+                </select>
+                <select id="periodValue" class="period-dropdown">
+                    <!-- 동적으로 생성됩니다 -->
+                </select>
+            </div>
+        </div>
+
+        <div class="sort-options">
+            <select id="sortBy">
+                <option value="date">날짜순</option>
+                <option value="amount">금액순</option>
+                <option value="category">항목순</option>
+            </select>
         </div>
 
         <div class="summary-cards">
@@ -35,14 +60,6 @@
                 <h3>잔액</h3>
                 <p id="totalBalance">0원</p>
             </div>
-        </div>
-
-        <div class="sort-options">
-            <select id="sortBy">
-                <option value="date">날짜순</option>
-                <option value="amount">금액순</option>
-                <option value="category">항목순</option>
-            </select>
         </div>
 
         <div class="transaction-list" id="transactionList">
