--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>지윤이 도토리 창고 - 캘린더</title>
+    <title>한지윤 도토리 창고</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>가계부 캘린더</h1>
+            <h1>한지윤 도토리 창고</h1>
             <div class="nav-buttons">
                 <button onclick="location.href='dashboard.html'" class="nav-btn">대시보드</button>
                 <button onclick="confirmLogout()" class="nav-btn logout-btn">
