--- a/dashboard.html
+++ b/dashboard.html
@@ -8,14 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="data:,">
+
 </head>
 <body>
     <div class="container">
         <header class="header">
             <h1>대시보드</h1>
             <div class="nav-buttons">
-                <button onclick="location.href='calendar.html'" class="nav-btn">캘린더</button>
-                <button onclick="confirmLogout()" class="nav-btn logout-btn">
+                <button id="calendarBtn" class="nav-btn">캘린더</button>
+                <button id="logoutBtn" class="nav-btn logout-btn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M9 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V5C3 4.46957 3.21071 3.96086 3.58579 3.58579C3.96086 3.21071 4.46957 3 5 3H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M16 17L21 12L16 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
