--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Lottie 애니메이션 추가 -->
             <div class="lottie-container">
                 <lottie-player 
-                    src="https://lottie.host/6b503a41-1958-4c4c-a22a-17e8d5fb6af8/oKjvHKfJlN.json"
+                    src="assets/lottie/animation.json"
                     background="transparent"
                     speed="1"
                     style="width: 200px; height: 200px;"
